; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_supported.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_automount.c_automount_supported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@automount_supported.supported = internal global i32 -1, align 4
@.str = private unnamed_addr constant [12 x i8] c"/dev/autofs\00", align 1
@F_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @automount_supported to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @automount_supported() #0 {
  %1 = load i32, i32* @automount_supported.supported, align 4
  %2 = icmp slt i32 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = load i32, i32* @F_OK, align 4
  %5 = call i64 @access(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = icmp sge i64 %5, 0
  %7 = zext i1 %6 to i32
  store i32 %7, i32* @automount_supported.supported, align 4
  br label %8

8:                                                ; preds = %3, %0
  %9 = load i32, i32* @automount_supported.supported, align 4
  ret i32 %9
}

declare dso_local i64 @access(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
